--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
     "express": "~4.14.0",
     "jade": "~1.11.0",
     "morgan": "~1.7.0",
-    "serve-favicon": "~2.3.0"
+    "mysql": "^2.12.0",
+    "sequelize": "^3.24.8",
+    "serve-favicon": "~2.3.0",
+    "sqlite3": "^3.1.8"
   }
 }
