--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mysql": "^2.12.0",
     "sequelize": "^3.24.8",
     "serve-favicon": "~2.3.0",
-    "sqlite3": "^3.1.8"
+    "sqlite3": "^3.1.8",
+    "underscore": "^1.8.3"
   }
 }
