--- a/package.json
+++ b/package.json
@@ -9,10 +9,12 @@
     "bluebird": "^3.4.6",
     "body-parser": "~1.15.2",
     "co-express": "^1.2.2",
+    "colors": "^1.1.2",
     "cookie-parser": "~1.4.3",
     "debug": "~2.2.0",
     "ejs": "^2.5.2",
     "express": "~4.14.0",
+    "jsonwebtoken": "^7.1.9",
     "morgan": "~1.7.0",
     "mysql": "^2.12.0",
     "sequelize": "^3.24.8",
